--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@formulajs/formulajs": "^4.5.3",
     "hot-formula-parser": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
